# gazebo-sim

./: CMakeLists.txt  README.md  bridge.yaml  package.xml  params.yaml  rviz_config.rviz  sim_launch.sh
models/: cone_325_no_color.stl  formula_car_with_wheels.stl
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/config/: pure_pursuit.yaml
pure_pursuit/include/pure_pursuit/: pure_pursuit.hpp
pure_pursuit/launch/: pure_pursuit.launch.py
pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit_node.cpp
sdf/: world.sdf  world_template.sdf
simulator/: filter.py  odom_filter.py  simulator_launch.py
tracks/: race_track.csv
